<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="3"
    android:weightSum="120"
    tools:context=".RomanCalculator">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <TextView
            android:id="@+id/tvCalcMonitor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="4"
            android:gravity="start|center"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">


        <TextView
            android:id="@+id/tvCalcMonitorTranslator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="start|center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAc"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnAc" />

        <Button
            android:id="@+id/btnDiv"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnDiv" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn9" />

        <Button
            android:id="@+id/btnMulti"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnMulti" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn6" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnMinus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btn3" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnPlus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:text="@string/calc_btn0" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calc_btnEqual" />
    </TableRow>

</TableLayout>