<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical">



        <TextView
            android:id="@+id/tvHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_text1"
            android:textSize="30sp"
            tools:text="Olá!" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_text2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_text3"
            android:textSize="18sp"
            android:textStyle="bold" />

</LinearLayout>